# ARGUS

./: .env.example  .gitattributes  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
config/: sic_sector_map.yaml  universe.yaml  watchlist.yaml
docs/: README.md  architecture.md  data-model.md  operations.md  pipeline.md  point-in-time.md  reliability.md  serving-contract.md  sources-and-voting.md
ops/: runbook.md
scripts/: register_scheduled_tasks.ps1  setup_argus.bat
src/argus/: __init__.py  cli.py  config_files.py  db.py  logging_setup.py  settings.py
src/argus/canonical/: actions_store.py  daily_bars.py  scd2.py
src/argus/core/: calendars.py  clocks.py  hashing.py
src/argus/derive/: spreads.py
src/argus/events/: schemas.py  store.py
src/argus/factors/: adjustment.py
tests/: conftest.py
tests/chaos/: test_degradation.py
tests/integration/: test_daily_slice.py  test_intraday_slice.py  test_rebuild.py  test_revision_nights.py  test_survivorship.py
tests/unit/: test_alpaca.py  test_alpaca_daily.py  test_budget_sizing.py  test_calendars.py  test_clock_discipline.py  test_events_store.py  test_hashing.py  test_health_dlq.py  test_http.py  test_jobs.py  test_knowledge_vectorized.py  test_landing.py  test_mad.py  test_minute_normalize.py  test_parity_edgar.py  test_pit_serving.py  test_ratelimit.py  test_retry.py  test_reversal.py  test_revision_flow.py  test_runner.py  test_scd2.py  test_settings.py  test_spreads.py  test_stooq_polygon_sources.py  test_symbol_dirs.py  test_trust_jobs.py  test_universe_parse.py  test_voting.py  test_yf_daily.py  test_yf_minute.py
(+31 files in other folders)
