[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "argus"
version = "0.1.0"
description = "ARGUS v4 - minimum-cost, PIT-correct market data platform (DuckDB + Parquet, Tier 0)"
requires-python = ">=3.11"
dependencies = [
    "polars>=1.0",
    "duckdb>=0.10",
    "pyarrow>=15",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "structlog>=24",
    "httpx>=0.27",
    "yfinance>=0.2.40,<0.3",
    "exchange-calendars>=4.5",
    "tzdata>=2024.1",
    "pyyaml>=6",
    "typer>=0.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov",
    "pytest-socket>=0.7",
    "hypothesis>=6.98",
    "respx>=0.21",
    "time-machine>=2.14",
    "ruff>=0.4",
    "mypy>=1.10",
]

[project.scripts]
argus = "argus.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/argus"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]

[tool.ruff.lint.per-file-ignores]
# typer's API is Option/Argument calls in parameter defaults — B008 by design
"src/argus/cli.py" = ["B008"]

[tool.mypy]
ignore_missing_imports = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "--disable-socket"
markers = ["live: hits real APIs (excluded by default; run explicitly with -m live --allow-hosts=...)"]
filterwarnings = ["ignore::DeprecationWarning"]
